update inventory endpoint for FE
